Default cube UVs are incorrectly arranged. #67639

Closed
opened 2019-07-25 07:22:38 +02:00 by matc · 10 comments

Blender Version
Broken: 2.80.75, 76dfbee423, master, 2010-07-25

Short description of error
The UV map of the default cube are aligned in a way that some vertices make contact with each other in UV space but don't actually make contact with each other in 3D space. Cubes added manually are not affected.

  • Default Cube default_cube.png
  • Manually added Cube new_cube.png

To fix this the default startup.blend file would have to be updated. All other meshes, that can be added manually, do have properly arranged UVs by default. As a side note the "Quad Sphere" in the sculpting startup.blend does not have UVs, and is to my knowledge the only way to end up with a mesh without UVs.

Exact steps for others to reproduce the error

  • Create an Image
  • Create a Material
  • Set Base Color as Image Texture with image
  • Set Cube material to Material
  • Paint edges in Vertex Painting
**Blender Version** Broken: 2.80.75, 76dfbee423e8b, master, 2010-07-25 **Short description of error** The UV map of the default cube are aligned in a way that some vertices make contact with each other in UV space but don't actually make contact with each other in 3D space. Cubes added manually are not affected. * Default Cube ![default_cube.png](https://archive.blender.org/developer/F7627764/default_cube.png) * Manually added Cube ![new_cube.png](https://archive.blender.org/developer/F7627766/new_cube.png) To fix this the default startup.blend file would have to be updated. All other meshes, that can be added manually, do have properly arranged UVs by default. As a side note the "Quad Sphere" in the sculpting startup.blend does not have UVs, and is to my knowledge the only way to end up with a mesh without UVs. **Exact steps for others to reproduce the error** - Create an Image - Create a Material - Set Base Color as Image Texture with image - Set Cube material to Material - Paint edges in Vertex Painting
Author

Added subscriber: @matc

Added subscriber: @matc
Member

Added subscriber: @Mets

Added subscriber: @Mets
Member

There was another report about the default cube needing an update but alas, my search function literally does not work.

There was another report about the default cube needing an update but alas, my search function literally does not work.

This issue was referenced by ba94aaedba

This issue was referenced by ba94aaedba26acc4a43b78ad7fd3552f1dbafc36

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Campbell Barton self-assigned this 2019-07-26 14:33:48 +02:00
Member

Hey, my search bar works again :) Related bug I was mentioning: #51332

Hey, my search bar works again :) Related bug I was mentioning: #51332
Author

That bug was filed in 2017.

That bug was filed in 2017.
Member

Yeah, but I checked yesterday and the bug still seemed present. Although I doubt it's a very important bug, I just wanted to mention it, since it's a shame to have a partially fixed default cube :P. I just wish my searchbar worked initially so I could've mentioned it in time.

I also wonder though, and this question is relevant to both bugs, why is the code for creating the default cube not the same as other cubes? That seems like it shouldn't be that way, but I know very little about C code.

Yeah, but I checked yesterday and the bug still seemed present. Although I doubt it's a very important bug, I just wanted to mention it, since it's a shame to have a partially fixed default cube :P. I just wish my searchbar worked initially so I could've mentioned it in time. I also wonder though, and this question is relevant to both bugs, why is the code for creating the default cube not the same as other cubes? That seems like it shouldn't be that way, but I know very little about C code.
Author

Looks like the geometry is inverted. Scaling the mesh of one cube in edit mode by -1 allows shape keys to work between the default cube and a newly added cube.

Looks like the geometry is inverted. Scaling the mesh of one cube in edit mode by -1 allows shape keys to work between the default cube and a newly added cube.

Closed as duplicate of #51332

Closed as duplicate of #51332
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67639
No description provided.