Fix T67639: Default cube UVs are incorrectly arranged